# topsoe-ai-demo

./: README.md  app.py  demo.ipynb  index.html  pyproject.toml  template.env
faiss-file/: index.pkl
knowledge_gpt/: main.py  prompts.py
knowledge_gpt/components/: sidebar.py
static/: script.js  style.css
